--- a/QuanLyBenhvien/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenhvien/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-   
+   <link rel="stylesheet" href="~/css/layout_Index.css" asp-append-version="true" />
 </head>
 
 <body class="container">
