--- a/QuanLyBenhvien/Views/Shared/_Layout.cshtml.css
+++ b/QuanLyBenhvien/Views/Shared/_Layout.cshtml.css
@@ -1,210 +1,1 @@
-﻿/* Reset mặc định */
-
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 1;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: normal;
-    color: #3F1536;
-}
-
-
-
-
-/* Thanh top chứa logo và thông tin */
-.top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: white;
-    padding: 10px 50px;
-    border-bottom: 2px solid #ddd;
-    height: 80px;
-}
-
-.logo {
-    width: 40%;
-    display: flex;
-    align-items: center;
-}
-
-    .logo img {
-       
-        margin-right: 10px;
-    }
-
-    .logo span strong, .logo span t {
-        font-size: 32px;
-        color: #2A2A72;
-        font-family: 'Yeseva One', cursive;
-    }
-
-    .logo span t {
-        font-size: 48px;
-    }
-
-.info {
-    width: 60%;
-    font-family: 'Work Sans',sans-serif;
-    font-size: 16px;
-    display: flex;
-    gap: 20px;
-}
-
-
-
-    .info a {
-        text-decoration: none;
-        color: #159EEC;
-        font-weight: normal;
-    }
-
-    .info p1 {
-        font-size: 14px;
-        color: #159EEC;
-        font-weight: normal;
-    }
-
-/* Thanh điều hướng */
-.navbar {
-    display: flex;
-  
-    align-items: center;
-    background: #EAF6FF;
-  
-    height: 80px;
-
-    
-}
-
-    .navbar ul {
-        max-width: 75%;
-        list-style: none;
-        display: flex;
-        gap: 20px;
-        margin-left: 83px;
-      
-    }
-
-.navbar ul li {
-    display: inline-block;
-}
-
-    .navbar ul li a {
-        text-decoration: none;
-        font-size: 18px;
-    }
-
-.navbar ul .active a {
-    font-weight: bold;
-}
-
-.actions {
-    max-width: 25%;
-    display: flex;
-    gap: 20px;
-    margin-right: 83px;
-}
-
-.search-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.appointment-btn {
-    background-color: #BFD2F8;
-    border-radius: 50px;
-    padding: 10px 30px;
-    width: 143px;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
- 
-}
-
-.avatar {
-   width:60px;
-
-}
-
-
-
-.footer {
-    position: relative;
-    background-color: #00aaff;
-    color: #fff;
-    padding: 40px 0;
-}
-
-.footer h5 {
-    color: #8b0000;
-    font-weight: bold;
-}
-
-.footer p, .footer ul, .footer input {
-    color: #000;
-}
-
-.footer ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer ul li {
-    margin-bottom: 10px;
-}
-
-.footer ul li a {
-    color: #000;
-    text-decoration: none;
-}
-
-.footer ul li a:hover {
-    text-decoration: underline;
-}
-
-.footer input[type="email"] {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin-right: 10px;
-}
-
-.footer button[type="submit"] {
-    background-color: #8b0000;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.footer button[type="submit"] img {
-    width: 20px;
-    height: 20px;
-}
-
-.footer .social-icons {
-    margin-top: 20px;
-}
-
-.footer .social-icons a {
-    margin: 0 10px;
-    display: inline-block;
-}
-
-.footer .social-icons img {
-    width: 30px;
-    height: 30px;
-}
+﻿
