Done Login with GG And FB

--- a/QuanLyBenhvien/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenhvien/Views/Shared/_Layout.cshtml
@@ -47,7 +47,8 @@
                 <button class="search-btn"><img src="/image/search.svg"></img></button>
                 <button class="appointment-btn">ĐẶT LỊCH</button>
                 <div class="profile-icon">
-                    <img class="avatar" src="image/maleuser.svg" alt="">
+                  
+                    <a class="nav-item nav-link" href="/Home/Login">  <img class="avatar" src="image/maleuser.svg" alt=""></a>
                 </div>
             </div>
         </nav>
@@ -103,6 +104,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+ 
 </body>
 
 </html>
