Xong đăng nhập đăng ký

--- a/QuanLyBenhvien/Views/Doctor/Index.cshtml
+++ b/QuanLyBenhvien/Views/Doctor/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Doctor Dashboard";
+    Layout = "~/Views/Shared/_Layout_User.cshtml";
 }
 
 <div class="text-center">
